[gd_scene load_steps=73 format=2]

[ext_resource path="res://Scripts/bossScripts/SwordBoss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/crablord/octolord00.png" type="Texture" id=2]
[ext_resource path="res://Sprites/crablord/octolord01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/crablord/octolord02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/crablord/octolord03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/crablord/octolord04.png" type="Texture" id=6]
[ext_resource path="res://Sprites/crablord/octolord05.png" type="Texture" id=7]
[ext_resource path="res://Sprites/crablord/octolord06.png" type="Texture" id=8]
[ext_resource path="res://Sprites/crablord/octolord07.png" type="Texture" id=9]
[ext_resource path="res://Sprites/crablord/octolord08.png" type="Texture" id=10]
[ext_resource path="res://Sprites/crablord/octolord09.png" type="Texture" id=11]
[ext_resource path="res://Sprites/crablord/octolord10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/crablord/octolord11.png" type="Texture" id=13]
[ext_resource path="res://Sprites/crablord/octolord12.png" type="Texture" id=14]
[ext_resource path="res://Sprites/crablord/octolord13.png" type="Texture" id=15]
[ext_resource path="res://Sprites/crablord/octolord14.png" type="Texture" id=16]
[ext_resource path="res://Sprites/crablord/octolord15.png" type="Texture" id=17]
[ext_resource path="res://Sprites/crablord/octolord16.png" type="Texture" id=18]
[ext_resource path="res://Sprites/crablord/octolord17.png" type="Texture" id=19]
[ext_resource path="res://Sprites/crablord/octolord18.png" type="Texture" id=20]
[ext_resource path="res://Sprites/crablord/octolord19.png" type="Texture" id=21]
[ext_resource path="res://Sprites/crablord/octolord20.png" type="Texture" id=22]
[ext_resource path="res://Sprites/crablord/octolord21.png" type="Texture" id=23]
[ext_resource path="res://Sprites/crablord/octolord22.png" type="Texture" id=24]
[ext_resource path="res://Sprites/crablord/octolord23.png" type="Texture" id=25]
[ext_resource path="res://Sprites/crablord/octolord24.png" type="Texture" id=26]
[ext_resource path="res://Sprites/crablord/octolord25.png" type="Texture" id=27]
[ext_resource path="res://Sprites/crablord/octolord26.png" type="Texture" id=28]
[ext_resource path="res://Sprites/crablord/octolord27.png" type="Texture" id=29]
[ext_resource path="res://Sprites/crablord/octolord28.png" type="Texture" id=30]
[ext_resource path="res://Sprites/crablord/octolord29.png" type="Texture" id=31]
[ext_resource path="res://Sprites/crablord/octolord30.png" type="Texture" id=32]
[ext_resource path="res://Sprites/crablord/octolord31.png" type="Texture" id=33]
[ext_resource path="res://Sprites/crablord/octolord32.png" type="Texture" id=34]
[ext_resource path="res://Sprites/crablord/octolord33.png" type="Texture" id=35]
[ext_resource path="res://Sprites/crablord/octolord34.png" type="Texture" id=36]
[ext_resource path="res://Sprites/crablord/octolord35.png" type="Texture" id=37]
[ext_resource path="res://Sprites/crablord/octolord36.png" type="Texture" id=38]
[ext_resource path="res://Sprites/crablord/octolord37.png" type="Texture" id=39]
[ext_resource path="res://Sprites/crablord/octolord38.png" type="Texture" id=40]
[ext_resource path="res://Sprites/crablord/octolord39.png" type="Texture" id=41]
[ext_resource path="res://Sprites/crablord/octolord40.png" type="Texture" id=42]
[ext_resource path="res://Sprites/crablord/octolord41.png" type="Texture" id=43]
[ext_resource path="res://Sprites/crablord/octolord42.png" type="Texture" id=44]
[ext_resource path="res://Sprites/crablord/octolord43.png" type="Texture" id=45]
[ext_resource path="res://Sprites/crablord/octolord44.png" type="Texture" id=46]
[ext_resource path="res://Sprites/crablord/octolord45.png" type="Texture" id=47]
[ext_resource path="res://Sprites/crablord/octolord46.png" type="Texture" id=48]
[ext_resource path="res://Sprites/crablord/octolord47.png" type="Texture" id=49]
[ext_resource path="res://Sprites/crablord/octolord48.png" type="Texture" id=50]
[ext_resource path="res://Sprites/crablord/octolord49.png" type="Texture" id=51]
[ext_resource path="res://Sprites/crablord/octolord50.png" type="Texture" id=52]
[ext_resource path="res://Sprites/crablord/octolord51.png" type="Texture" id=53]
[ext_resource path="res://Sprites/crablord/octolord52.png" type="Texture" id=54]
[ext_resource path="res://Sprites/crablord/octolord53.png" type="Texture" id=55]
[ext_resource path="res://Sprites/crablord/octolord54.png" type="Texture" id=56]
[ext_resource path="res://Sprites/crablord/octolord55.png" type="Texture" id=57]
[ext_resource path="res://Sprites/crablord/octolord56.png" type="Texture" id=58]
[ext_resource path="res://Sprites/crablord/octolord57.png" type="Texture" id=59]
[ext_resource path="res://Sprites/crablord/octolord58.png" type="Texture" id=60]
[ext_resource path="res://Sprites/crablord/octolord59.png" type="Texture" id=61]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=62]
[ext_resource path="res://Sprites/attack/sword swing1.png" type="Texture" id=63]
[ext_resource path="res://Sprites/attack/sword swing2.png" type="Texture" id=64]
[ext_resource path="res://Sprites/attack/sword swing3.png" type="Texture" id=65]
[ext_resource path="res://Sprites/attack/sword swing4.png" type="Texture" id=66]
[ext_resource path="res://Sprites/attack/sword swing5.png" type="Texture" id=67]
[ext_resource path="res://audio/sword.wav" type="AudioStream" id=68]
[ext_resource path="res://audio/hit.wav" type="AudioStream" id=69]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8.66667 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ) ],
"loop": false,
"name": "metal",
"speed": 15.0
} ]

[node name="SwordBoss" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 59
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 62 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="swing_pivot" type="Node2D" parent="."]
visible = false

[node name="swing" type="AnimatedSprite" parent="swing_pivot"]
position = Vector2( 0, -60 )
scale = Vector2( 5, 5 )
frames = SubResource( 3 )
animation = "metal"

[node name="sword_swing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 68 )

[node name="get_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 69 )

